[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
emath = "0.30.0"
js-sys = "0.3.77"
rand = { version = "0.9.0", default-features = false, features = ["small_rng"] }
web-sys = { version = "0.3.77", features = ["CssStyleDeclaration"] }
yew = { version="0.20", features=["csr"] }
